# weather-station

./: .clang-format  CMakeLists.txt  LICENSE  README.md  apply-license  get-stats  reformat  run  run.sh  sdkconfig  sdkconfig.old  test-response  todo.txt
main/: CMakeLists.txt  Kconfig.projbuild  weather_station_main.c
main/display/: display.c  display.h
main/gpio/: gpio_util.c  gpio_util.h
main/libs/dht/: DHT.h  DHT_c.c
main/libs/http-client/: CMakeLists.txt  http_client.c  http_client.h  http_get.c  http_get.h
main/libs/infrared-receiver/: CMakeLists.txt  infrared_nec.c  infrared_nec.h
main/libs/json/: cJSON.c  cJSON.h
main/libs/ssd1306/: Kconfig.projbuild  font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_i2c.c  ssd1306_spi.c
main/libs/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.c  wifi.h
main/model/: forecast.c  forecast.h  model.h  onboard_led.c  onboard_led.h  system_action.c  system_action.h  system_message.c  system_message.h
main/tasks/: dht_task.c  dht_task.h  display_task.c  display_task.h  ir_remote_task.c  ir_remote_task.h  weather_forecast_task.c  weather_forecast_task.h
main/util/: date_time.c  date_time.h  logging.c  logging.h  util.c  util.h
